# InferenceProfiling

./: .gitignore  README.md  pyproject.toml  requirements.txt
portfolio_data/: README.md  manifest.json
portfolio_data/call_trees/: bucketed_bs32_call_tree.html  bucketed_bs64_call_tree.html  bucketed_bs64_cpu_call_tree.html  bucketed_bs64_gpu_call_tree.html  random_bs16_call_tree.html  random_bs64_call_tree.html  random_bs64_cpu_call_tree.html  random_bs64_gpu_call_tree.html
portfolio_data/content/: conclusions.md  story_outline.md  trocr_architecture.md
portfolio_data/data/: batch_examples.json  batching_comparison_results.csv  batching_improvements.json  bucketed_batch_metrics.csv  bucketed_batch_results.csv  portfolio_metrics.json  random_batch_metrics.csv  random_batch_results.csv  repeat_image_scaling_results.csv  sample_images.json  sections.json  trocr_flow_steps.json
portfolio_data/plots/: batching_strategy_cost.html  batching_strategy_latency.html  batching_strategy_tail_latency.html  batching_strategy_throughput.html  latency_vs_generated_tokens.html  latency_vs_text_length.html  random_batch_latency.html  random_batch_throughput.html  repeat_image_latency.html  repeat_image_memory.html  repeat_image_throughput.html
src/mip/: __init__.py  analyze_trace.py  compare_runs.py  export_batch_examples.py  export_trocr_flow.py  plot_call_tree.py  plot_results.py  profile_trocr.py
