[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model-inference-profiling"
version = "0.1.0"
description = "Profile and visualize Hugging Face model inference bottlenecks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "transformers",
  "datasets",
  "accelerate",
  "pillow",
  "pandas",
  "plotly",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
